# LittleOS

./: CMakeLists.txt  Readme.md
script/: img-write-linux.sh  img-write-osx.sh  qemu-debug-linux.sh  qemu-debug-osx.sh  qemu-debug-win.bat
source/applib/: CMakeLists.txt  crt0.S  cstart.c  lib_syscall.c  lib_syscall.h
source/boot/: CMakeLists.txt  boot.c  start.S
source/comm/: boot_info.h  cpu_instr.h  elf.h  types.h
source/init/: CMakeLists.txt  main.c
source/kernel/: CMakeLists.txt  kernel.lds
source/kernel/core/: memory.c  syscall.c  task.c
source/kernel/cpu/: cpu.c  irq.c
source/kernel/dev/: console.c  dev.c  disk.c  kbd.c  time.c  tty.c
source/kernel/fs/: file.c  fs.c
source/kernel/fs/devfs/: devfs.c
source/kernel/fs/fatfs/: fatfs.c
source/kernel/include/: os_cfg.h
source/kernel/include/core/: memory.h  syscall.h  task.h
source/kernel/include/cpu/: cpu.h  irq.h  mmu.h
source/kernel/include/dev/: console.h  dev.h  disk.h  kbd.h  time.h  tty.h
source/kernel/include/fs/: file.h  fs.h
source/kernel/include/fs/devfs/: devfs.h
source/kernel/include/fs/fatfs/: fatfs.h
source/kernel/include/ipc/: mutex.h  sem.h
source/kernel/include/tools/: bitmap.h  klib.h  list.h  log.h
source/kernel/init/: first_task.c  first_task_entry.S  init.c  init.h  lib_syscall.c  start.S
source/kernel/ipc/: mutex.c  sem.c
source/kernel/tools/: bitmap.c  klib.c  list.c  log.c
source/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_32.c  start.S
source/loop/: CMakeLists.txt  main.c
source/shell/: CMakeLists.txt  main.c  main.h
source/snake/: CMakeLists.txt  main.c  main.h
